test/files/neg/quasiquotes_syntaxerrors_qq3.scala
object Test extends App {
  println(s"$2err")
  println(s"qwe$2err")
  println(s"$2err  bar")
  println(s"qwe$2err bar")
  println(s"$22err")
  println(s"qwe$22err")
  println(s"$22err bar")
  println(s"qwe$22err bar")
}